fixed x-overflow on some android views

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -98,6 +98,9 @@ body {
   min-height: 100vh;
   flex-direction: column;
   overflow-y: auto;
+  }
+
+.wrapper, body {
   overflow-x: hidden; // account for vertical scrollbar on 100vw
 }
 
